--- a/public/css/items.css
+++ b/public/css/items.css
@@ -78,7 +78,7 @@ a{
     overflow:hidden;
     margin:-60px 0 0;
     display:block;
-    background:url(../images/ad_ctr.png) no-repeat;
+    background:url(../img/ad_ctr.png) no-repeat;
     position:absolute;
     top:50%;
     z-index:10;
