--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -183,7 +183,8 @@ ul,li{
 }
 /********************************************************/
 /* flexslider */
-/* .flexslider{
+/*
+.flexslider{
      margin:0 auto;
      position:relative;
      width:75rem;
