--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -1,68 +1,5 @@
 @charset "utf-8";
 /* CSS Document */
-body, html {
-    width: 100%;
-    max-width: 720px;
-    margin: 0 auto;
-}
-html {
-    font-family: PingFangSC-Light,helvetica,'Heiti SC',"Microsoft YaHei",sans-serif!important;
-    -webkit-text-size-adjust: 100%;
-    text-size-adjust: 100%;
-    font-size: 16px;
-}
-body, button, dd, dl, form, h1, h2, h3, h4, h5, h6, input, ol, p, td, textarea, th, ul {
-    margin: 0;
-    padding: 0;
-}
-ol, ul {
-    list-style: none;
-}
-a, button {
-    cursor: pointer;
-    text-decoration: none;
-}
-
-@media screen and (min-width: 300px) {
-    html {
-        font-size: 250%;
-    }
-}
-@media screen and (min-width: 320px) {
-    html {
-        font-size: 266.66667%;
-    }
-}
-@media screen and (min-width: 340px) {
-    html {
-        font-size: 283.33333%;
-    }
-}
-@media screen and (min-width: 360px) {
-    html {
-        font-size: 300%;
-    }
-}
-@media screen and (min-width: 375px) {
-    html {
-        font-size: 312.5%;
-    }
-}
-@media screen and (min-width: 380px) {
-    html {
-        font-size: 316.66667%;
-    }
-}
-@media screen and (min-width: 400px) {
-    html {
-        font-size: 333.33333%;
-    }
-}
-@media screen and (min-width: 414px) {
-    html {
-        font-size: 345%;
-    }
-}
 body{
     background-color:#E5E5E5;
 }
@@ -84,7 +21,7 @@ ul,li{
     float:right;
 }
 .banner{
-    height:27.5rem;
+    height:440px;
     margin:0 auto;
     position:relative;
     overflow:hidden;
@@ -97,11 +34,11 @@ ul,li{
     position:absolute;
     width:100%;
     height:100%;
-    background-position:-6.25rem;
+    background-position:-100px;
 }
 .banner-roll a{
     display:block;
-    height:27.5rem;
+    height:440px;
 }
 .banner-roll img{
     width:100%;
@@ -110,29 +47,29 @@ ul,li{
 .title{
     position:absolute;
     bottom:0;
-    line-height:3.75rem;
-    padding:0 1.25rem;
-    font-size:1.75rem;
+    line-height:60px;
+    padding:0 20px;
+    font-size:28px;
     background:rgba(7,7,7,0.30);
     color:#FFF;
     width:100%;
 }
 .headline{
-    padding:0 1.25rem;
+    padding:0 20px;
 }
 .headline .left{
-    line-height:6.25rem;
-    font-size:2.25rem;
+    line-height:100px;
+    font-size:36px;
 }
 .headline .right{
-    line-height:6.25rem;
-    font-size:1.75rem;
+    line-height:100px;
+    font-size:28px;
 }
 .feed-list .row{
     width:48%;
     background-color:#FFF;
-    margin:0 0.625rem 1.25rem 0.5rem;
-    box-shadow: 0 0.0625rem 0.125rem 0 rgba(0,0,0,0.10);
+    margin:0 10px 20px 8px;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.10);
 }
 .row a{
     display:block;
@@ -140,11 +77,11 @@ ul,li{
 }
 .row-pic{
     width:100%;
-    height:100%;
+    height:auto;
 }
 .row-pic img{
     width:100%;
-    height:100%;
+    height:auto;
 }
 .masking{
     content: " ";
@@ -156,125 +93,117 @@ ul,li{
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.08), rgba(0,0,0,0));
 }
 .row h1{
-    font-size:2rem;
+    font-size:32px;
     text-align:center;
 }
 .row p{
-    font-size:1.5rem;
+    font-size:24px;
     text-align:center;
 }
 .row h6{
-    font-size:3.125rem;
+    font-size:50px;
     color:#e33a3a;
-    line-height:3.125rem;
+    line-height:50px;
     text-align:center;
 }
 .feed-list{
-    padding:0 1.25rem;
+    padding:0 20px;
 }
 .rmb-text>p{
-    padding-right:2.5rem;
-    margin:1.875rem 0rem 0rem;
+    margin:30px 0px 0px;
     text-decoration:line-through;
 }
 .rmb-text h6{
-    padding-left:35%;
-    margin:0.9375rem 0rem;
+    margin:15px 0px;
 }
 /********************************************************/
 /* flexslider */
-/*
 .flexslider{
-     margin:0 auto;
-     position:relative;
-     width:75rem;
-     height:26.25rem;
-     overflow:hidden;
-     zoom:1;
+    margin:0 auto;
+    position:relative;
+    width:1200px;
+    height:420px;
+    overflow:hidden;
+    zoom:1;
 }
- .flex-viewport{
-     max-height:125rem;
-     -webkit-transition:all 1s ease;
-     -moz-transition:all 1s ease;
-     transition:all 1s ease;
+.flex-viewport{
+    max-height:2000px;
+    -webkit-transition:all 1s ease;
+    -moz-transition:all 1s ease;
+    transition:all 1s ease;
 }
- .flexslider .slides{
-     zoom:1;
+.flexslider .slides{
+    zoom:1;
 }
- .flexslider .slides li {
-     display: none;
+.flexslider .slides li {
+    display: none;
 }
- .flex-direction-nav a{
-     width:3.75rem;
-     height:5.625rem;
-     line-height:99em;
-     overflow:hidden;
-     margin:-3.75rem 0 0;
-     display:block;
-     background:url(../img/ad_ctr.png) no-repeat;
-     position:absolute;
-     top:50%;
-     z-index:10;
-     cursor:pointer;
-     opacity:0;
-     filter:alpha(opacity=0);
-     -webkit-transition:all .3s ease;
+.flex-direction-nav a{
+    width:60px;
+    height:90px;
+    line-height:99em;
+    overflow:hidden;
+    margin:-60px 0 0;
+    display:block;
+    background:url(../../img/ad_ctr.png) no-repeat;
+    position:absolute;
+    top:50%;
+    z-index:10;
+    cursor:pointer;
+    opacity:0;filter:alpha(opacity=0);
+    -webkit-transition:all .3s ease;
 }
- .flex-direction-nav .flex-next{
-     background-position:0 -5.625rem;
-     right:0;
+.flex-direction-nav .flex-next{
+    background-position:0 -90px;right:0;
 }
- .flex-direction-nav .flex-prev{
-     left:0;
+.flex-direction-nav .flex-prev{
+    left:0;
 }
- .flexslider:hover .flex-next{
-     opacity:0.8;
-     filter:alpha(opacity=25);
+.flexslider:hover .flex-next{
+    opacity:0.8;filter:alpha(opacity=25);
 }
- .flexslider:hover .flex-prev{
-     opacity:0.8;
-     filter:alpha(opacity=25);
+.flexslider:hover .flex-prev{
+    opacity:0.8;filter:alpha(opacity=25);
 }
- .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover{
-     opacity:1;
-     filter:alpha(opacity=50);
+.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover{
+    opacity:1;
+    filter:alpha(opacity=50);
 }
- .flex-control-nav{
-     z-index: 20;
-     padding-left: 0;
-     width:100%;
-     position:absolute;
-     bottom:0.5rem;
-     text-align: right;
+.flex-control-nav{
+    z-index: 20;
+    padding-left: 0;
+    width:100%;
+    position:absolute;
+    bottom:8px;
+    text-align: right;
 }
- .flex-control-nav li{
-     margin:0 0.3125rem;
-     display:inline-block;
-     zoom:1;
-     *display:inline;
+.flex-control-nav li{
+    margin:0 5px;
+    display:inline-block;
+    zoom:1;
+    *display:inline;
 }
- .flex-control-paging li a{
-     font-size: 0;
-     padding: 0.375rem;
-     display: inline-block;
-     cursor: pointer;
-     background-color: #ffffff;
-     border-radius: 0.1875rem;
-     box-shadow: 0rem 0rem 0.3125rem #b4a078;
+.flex-control-paging li a{
+    font-size: 0;
+    padding: 6px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px #b4a078;
 }
- .flex-control-paging li a.flex-active{
-     background-color: #b4a078;
+.flex-control-paging li a.flex-active{
+    background-color: #b4a078;
 }
- .flexslider .slider-title {
-     position: absolute;
-     bottom: 0;
-     z-index:10;
-     width:100%;
-     color: #ffffff;
-     font-size: 1rem;
-     line-height: 3.125rem;
-     padding: 0 1.25rem;
-     background-color:rgba(0,0,0,0.3);
+.flexslider .slider-title {
+    position: absolute;
+    bottom: 0;
+    z-index:10;
+    width:100%;
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 50px;
+    padding: 0 20px;
+    background-color:rgba(0,0,0,0.3);
 }
- */
 /********************************************************/
