--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -118,15 +118,14 @@ ul,li{
 }
 /********************************************************/
 /* flexslider */
-/*
 .flexslider{
     margin:0 auto;
     position:relative;
-    width:1200px;
+    width:100%;
     height:420px;
     overflow:hidden;
     zoom:1;
-
+    z-index:1;
 }
 .flex-viewport{
     max-height:2000px;
@@ -208,7 +207,7 @@ ul,li{
     padding: 0 20px;
     background-color:rgba(0,0,0,0.3);
 }
-*/
+/*
 .flexslider{
     margin:0 auto;
     position:relative;
@@ -301,4 +300,5 @@ ul,li{
     padding: 0 1.25rem;
     background-color:rgba(0,0,0,0.3);
 }
+*/
 /********************************************************/
