--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -139,6 +139,14 @@ ul,li{
 .flexslider .slides li {
     display: none;
 }
+.flexslider .slides li a {
+    position: absolute;
+    left: 50%;
+}
+.flexslider .slides li a>div{
+    position: relative;
+    left: -50%;
+}
 .flex-direction-nav a{
     width:60px;
     height:90px;
