--- a/public/css/items.css
+++ b/public/css/items.css
@@ -137,6 +137,12 @@ a{
     padding: 0 20px;
     background-color:rgba(0,0,0,0.3);
 }
+.flexslider .slider-title span {
+    display: block;
+    width: 1200px;
+    margin: 0 auto;
+}
+
 /********************************************************/
 /*list*/
 .wpn{
