--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -118,6 +118,7 @@ ul,li{
 }
 /********************************************************/
 /* flexslider */
+/* flexslider */
 .flexslider{
     margin:0 auto;
     position:relative;
@@ -125,7 +126,6 @@ ul,li{
     height:420px;
     overflow:hidden;
     zoom:1;
-    z-index:1;
 }
 .flex-viewport{
     max-height:2000px;
@@ -154,7 +154,7 @@ ul,li{
     overflow:hidden;
     margin:-60px 0 0;
     display:block;
-    background:url(../../img/ad_ctr.png) no-repeat;
+    background:url(../images/ad_ctr.png) no-repeat;
     position:absolute;
     top:50%;
     z-index:10;
@@ -215,98 +215,9 @@ ul,li{
     padding: 0 20px;
     background-color:rgba(0,0,0,0.3);
 }
-/*
-.flexslider{
-    margin:0 auto;
-    position:relative;
-    width:75rem;
-    height:26.25rem;
-    overflow:hidden;
-    zoom:1;
+.flexslider .slider-title span {
+    display: block;
+    width: 1200px;
+    margin: 0 auto;
 }
-.flex-viewport{
-    max-height:125rem;
-    -webkit-transition:all 1s ease;
-    -moz-transition:all 1s ease;
-    transition:all 1s ease;
-}
-.flexslider .slides{
-    zoom:1;
-}
-.flexslider .slides li {
-    display: none;
-}
-.flex-direction-nav a{
-    width:3.75rem;
-    height:5.625rem;
-    line-height:99em;
-    overflow:hidden;
-    margin:-3.75rem 0 0;
-    display:block;
-    background:url(../img/ad_ctr.png) no-repeat;
-    position:absolute;
-    top:50%;
-    z-index:10;
-    cursor:pointer;
-    opacity:0;
-    filter:alpha(opacity=0);
-    -webkit-transition:all .3s ease;
-}
-.flex-direction-nav .flex-next{
-    background-position:0 -5.625rem;
-    right:0;
-}
-.flex-direction-nav .flex-prev{
-    left:0;
-}
-.flexslider:hover .flex-next{
-    opacity:0.8;
-    filter:alpha(opacity=25);
-}
-.flexslider:hover .flex-prev{
-    opacity:0.8;
-    filter:alpha(opacity=25);
-}
-.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover{
-    opacity:1;
-    filter:alpha(opacity=50);
-}
-.flex-control-nav{
-    z-index: 20;
-    padding-left: 0;
-    width:100%;
-    position:absolute;
-    bottom:0.5rem;
-    text-align: right;
-}
-.flex-control-nav li{
-    margin:0 0.3125rem;
-    display:inline-block;
-    zoom:1;
-    *display:inline;
-}
-.flex-control-paging li a{
-    font-size: 0;
-    padding: 0.375rem;
-    display: inline-block;
-    cursor: pointer;
-    background-color: #ffffff;
-    border-radius: 0.1875rem;
-    box-shadow: 0rem 0rem 0.3125rem #b4a078;
-}
-.flex-control-paging li a.flex-active{
-    background-color: #b4a078;
-}
-.flexslider .slider-title {
-    position: absolute;
-    bottom: 0;
-    z-index:10;
-    width:100%;
-    color: #ffffff;
-    font-size: 1rem;
-    line-height: 3.125rem;
-    padding: 0 1.25rem;
-    background-color:rgba(0,0,0,0.3);
-}
-*/
 /********************************************************/
