--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -218,6 +218,6 @@ ul,li{
 .flexslider .slider-title span {
     display: block;
     width: 1200px;
-    margin: 0 auto;
+    margin: 0 25%;
 }
 /********************************************************/
