--- a/public/css/mobile/items.css
+++ b/public/css/mobile/items.css
@@ -110,12 +110,12 @@ ul,li{
     padding:0 20px;
 }
 .rmb-text>p{
-    margin: 15px 50px 15px 0px;
+    /*margin: 15px 50px 15px 0px;*/
     text-decoration: line-through;
     line-height: 50px;
 }
 .rmb-text h6{
-    margin: 15px 0px 15px 80px;
+   /*margin: 15px 0px 15px 80px;*/
 }
 /********************************************************/
 /* flexslider */
